# sopel-remind

./: .gitignore  .pylintrc  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
sopel_remind/: backend.py  config.py  plugin.py
tests/: test_at.py  test_backend.py  test_in.py  test_integration.py
